@@ -342,7 +342,8 @@ label{
 	left: 0;
 	position: relative;
 	margin-top: 0 !important;
-	border:0
+	border:0;
+	min-height:0
 }
 .menu-inter{
 	border-width:1px 0 0;
